--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "react-router-dom": "^5.2.0"
   }
